- you can view sprites up to 1024x1024
- show PCW common format screen

Improved changing pointer on some windows: can use an expression when changing memory pointer on Debug CPU, View Sprites, Hexdump, Disassemble, Poke
Improved changing to machines with big displays (Next, QL, CPC...): zoom is autochanged to 1
Improved joystick type selection

Improved ZX Desktop:
- Dynamic icons (Trash, My Machine, ...) assigned on top buttons now show dynamic state (trash empty/full, current machine image, etc)
- Show icon indicators for open apps on ZX Desktop
- Added setting to empty Trash on exit
- Fixed icons zoom level when selecting some machines that use menu gui zoom = 2 (Next, CPC, QL, etc)
- ZX Desktop size now is multiplied by GUI Zoom (Zoom 2 on machines like Next, CPC, QL, etc)
- CF2 Floppy icon (+3, CPC, PCW) now is animated when motor is on

Improved ZX Vision:
- Added windows TaskBar
- Added Process ID (PID) for all windows
- Text input fields now handle repeated keys
- Some text input fields now have history of last items, and history is saved on configuration file
- Added function to maximize all windows
- Allow reducing character height
- Improve window list showing spent time on each window and pid of each window/process
- Improve rendering background windows
- Yes/no confirmation dialogs are translated to si/no in Spanish and Catalan

* Fixes:

Fixed random crash on startup on Linux when executing some network operations (check updates, check last users, send updates)
Fixed segfaults when exiting using CTRL-C
Fixed Spectrum +3 disk emulation: TODO: add more details here
Fixed autoload on Spectrum +3
Fixed bug that may crash ZEsarUX when changing to a machine with bigger resolution. It seems to affect Linux and Windows but not Mac. This is a bug that has always existed (a "long life bug" XD)

Fixed showing creator on DSK file viewer
Fixed pause: can now return when pressing mouse button too